--- a/app/src/main/res/layout/item_recycler_view_entry.xml
+++ b/app/src/main/res/layout/item_recycler_view_entry.xml
@@ -25,9 +25,16 @@
         android:maxLines="2"
         android:textSize="14sp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/image"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="12컨텐츠 2컨텐츠 2컨텐츠 2컨텐츠 2컨텐츠 "/>
+
+    <TextView
+        android:id="@+id/language"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/contents"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
