--- a/app/src/main/res/layout/item_recycler_view_entry.xml
+++ b/app/src/main/res/layout/item_recycler_view_entry.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    android:paddingHorizontal="10dp">
+    android:paddingHorizontal="10dp"
+    android:paddingVertical="10dp">
 
     <ImageView
         android:id="@+id/image"
@@ -24,17 +25,23 @@
         android:ellipsize="end"
         android:maxLines="2"
         android:textSize="14sp"
+        app:layout_constraintVertical_chainStyle="spread_inside"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/sub_contents"
         app:layout_constraintStart_toEndOf="@id/image"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="12컨텐츠 2컨텐츠 2컨텐츠 2컨텐츠 2컨텐츠 "/>
 
     <TextView
-        android:id="@+id/language"
+        android:id="@+id/sub_contents"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="11sp"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintTop_toBottomOf="@id/contents"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintStart_toEndOf="@id/image"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="https://github.com/cocoslime/"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
