--- a/app/src/main/res/layout/item_recycler_view_entry.xml
+++ b/app/src/main/res/layout/item_recycler_view_entry.xml
@@ -37,11 +37,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="11sp"
+        app:layout_constrainedWidth="true"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintTop_toBottomOf="@id/contents"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/image"
+        app:layout_constraintStart_toStartOf="@id/contents"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="https://github.com/cocoslime/"/>
+        tools:text="https://github.com/cocoslime/https://github.com/cocoslime/"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
